thumbnails has changed. file paths has changed.

--- a/static/html/slide.html
+++ b/static/html/slide.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html>
   <head>
-    <script type="text/javascript" src="/static/static/js/jquery.js"></script>
-    <script type="text/javascript" src="/static/static/js/fade-plugin.js"></script>
+    <script type="text/javascript" src="/static/js/jquery.js"></script>
+    <script type="text/javascript" src="/static/js/fade-plugin.js"></script>
     <script type="text/javascript">
             $(document).ready(
 				function(){
@@ -40,13 +40,16 @@
 <div class="header">
     <ul id="header_id" class="slide-ul">
         <li>
-            <img class="img-li" src="/static/static/images/shot1.png" alt="The Beginning" />
+            <img class="img-li" src="/static/images/shot1.png" alt="The Beginning" />
         </li>
         <li>
-            <img class="img-li" src="/static/static/images/shot2.png" alt="The Beginning" />
+            <img class="img-li" src="/static/images/shot2.png" alt="The Beginning" />
         </li>
         <li>
-            <img class="img-li" src="/static/static/images/shot3.png" alt="The Beginning" />
+            <img class="img-li" src="/static/images/shot3.png" alt="The Beginning" />
+        </li>
+        <li>
+            <img class="img-li" src="/static/images/shot4.png" alt="The Beginning" />
         </li>
     </ul>
 </div>
